[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scenes/thrishaStuff/Prefab/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/thrishaStuff/images/football.png" type="Texture" id=2]
[ext_resource path="res://Scenes/thrishaStuff/Scripts/Football.gd" type="Script" id=3]
[ext_resource path="res://Scenes/thrishaStuff/Scripts/Jock.gd" type="Script" id=4]
[ext_resource path="res://Scenes/thrishaStuff/images/cheerleader.png" type="Texture" id=5]
[ext_resource path="res://Scenes/thrishaStuff/Scripts/Cheerleader.gd" type="Script" id=6]
[ext_resource path="res://icon.png" type="Texture" id=7]

[sub_resource type="CircleShape2D" id=2]
radius = 162.077

[sub_resource type="CircleShape2D" id=3]
radius = 162.077

[sub_resource type="CircleShape2D" id=1]
radius = 162.077

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 16, 546.5 )

[node name="SportsField" type="Node2D"]

[node name="Football" type="Area2D" parent="."]
position = Vector2( 224, 842 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Football"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="Football"]
scale = Vector2( 0.16, 0.16 )
texture = ExtResource( 2 )

[node name="QuestionMark" type="Sprite" parent="Football"]
position = Vector2( 0, -135 )
texture = ExtResource( 7 )

[node name="Jock" type="Area2D" parent="."]
position = Vector2( 577, 841 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Jock"]
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="Jock"]
scale = Vector2( 0.16, 0.16 )
texture = ExtResource( 5 )

[node name="QuestionMark" type="Sprite" parent="Jock"]
position = Vector2( 0, -135 )
texture = ExtResource( 7 )

[node name="Cheerleader" type="Area2D" parent="."]
position = Vector2( 1445, 838 )
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cheerleader"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Cheerleader"]
scale = Vector2( 0.16, 0.16 )
texture = ExtResource( 5 )

[node name="QuestionMark" type="Sprite" parent="Cheerleader"]
position = Vector2( 0, -135 )
texture = ExtResource( 7 )

[node name="player" parent="." instance=ExtResource( 1 )]
position = Vector2( 950, 515 )
scale = Vector2( 0.904085, 3.02499 )

[node name="Camera2D" type="Camera2D" parent="player"]
position = Vector2( 28.7583, 6.94217 )
scale = Vector2( 1.10609, 0.33058 )
current = true
limit_left = 0
limit_top = 0
limit_right = 1920
limit_bottom = 0

[node name="rightBoundary" type="StaticBody2D" parent="."]
position = Vector2( 1944, 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="rightBoundary"]
position = Vector2( -4, 532.5 )
shape = SubResource( 4 )

[node name="leftBoundary" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="leftBoundary"]
position = Vector2( -4, 532.5 )
shape = SubResource( 4 )

[connection signal="body_entered" from="Football" to="Football" method="_on_Football_body_entered"]
[connection signal="body_exited" from="Football" to="Football" method="_on_Football_body_exited"]
[connection signal="body_entered" from="Jock" to="Jock" method="_on_Cheerleader_body_entered"]
[connection signal="body_exited" from="Jock" to="Jock" method="_on_Cheerleader_body_exited"]
[connection signal="body_entered" from="Cheerleader" to="Cheerleader" method="_on_Cheerleader_body_entered"]
[connection signal="body_exited" from="Cheerleader" to="Cheerleader" method="_on_Cheerleader_body_exited"]
